Optimization MiBand.apk

--- a/Italian/main/MiBand.apk/res/values-it/strings.xml
+++ b/Italian/main/MiBand.apk/res/values-it/strings.xml
@@ -30,7 +30,7 @@ Agreement: %2$s"</string>
     <string name="date_last_week">settimana scorsa</string>
     <string name="date_this_month">mensili</string>
     <string name="date_last_month">mese scorso</string>
-    <string name="date_from_to">Dal %1$s al %2$s</string>
+    <string name="date_from_to">dalle %1$s alle %2$s</string>
     <string name="date_from_to_short">%1$s - %2$s</string>
     <string name="date_month_day">MMM d</string>
     <string name="date_year_month_day">d-MMM-yyyy</string>
@@ -211,8 +211,8 @@ Uscendo perderai i dati non sincronizzati. Procedere all'uscita?"</string>
     <string name="bmenu_dynamic">Dinamico</string>
     <string name="bmenu_device">Dispositivo</string>
     <string name="bmenu_my">Io</string>
-    <string name="fw_upgrade_succ">Aggiornamento Firmware completato, attendi il riavvio del MiBand…</string>
-    <string name="fw_upgrade_failed">Aggiornamento Firmware fallito!</string>
+    <string name="fw_upgrade_succ">Aggiornamento firmware completato, attendi il riavvio del MiBand…</string>
+    <string name="fw_upgrade_failed">Aggiornamento firmware fallito!</string>
     <string name="user_agreement">"Licenza d'utilizzo e trattamento dei dati"</string>
     <string name="error_code">"Codici d' errore"</string>
     <string name="alarm_setting">Impostazioni sveglia</string>
@@ -267,16 +267,16 @@ Da Lunedì a Domenica, dalle 8:00 alle 18:00"</string>
     <string name="input_precise_person_info">Inserire accuratamente le informazioni personali per permettere risultati più accurati</string>
     <string name="age">Età</string>
     <string name="ages">Anni</string>
-    <string name="check_upgrade">Verifica Aggiornamenti</string>
+    <string name="check_upgrade">Cerca aggiornamenti</string>
     <string name="visit_micom">Visita il sito ufficiale</string>
     <string name="apk_uptodate">"L'ultima versione è già installata."</string>
     <string name="local_app_failed">"Errore nella verifica dell'aggiornamento"</string>
-    <string name="checking_new_apk">Verifico…</string>
+    <string name="checking_new_apk">Verifica in corso...</string>
     <string name="please_knock_bracelet">Tocca delicatamente il MiBand</string>
     <string name="dynamic_title_sleep">Ultimo sonno</string>
     <string name="dynamic_title_step">Eventi di oggi</string>
     <string name="dynamic_step_tip">Totale passi attuale</string>
-    <string name="dynamic_sleep_tip">Totale dormito la notte scorsa</string>
+    <string name="dynamic_sleep_tip">Sonno totale la notte scorsa</string>
     <string name="dynamic_sleep_deep_title">Sonno profondo %s</string>
     <string name="dynamic_detail_sleep_title">Dati notturni %s</string>
     <string name="dynamic_detail_sleep_title_yesterday">"Dati dell'ultimo sonno"</string>
@@ -441,10 +441,10 @@ Non ti fermare, continua così!"</string>
     <string name="share_uninstall_client">"L'applicazione non è installata non puoi condividere!"</string>
     <string name="setting_feedback_send">Invia</string>
     <string name="setting_feedback_hint">Grazie per il feedback, seguiremo ogni singolo commento</string>
-    <string name="setting_feedback_address">Le tue informazioni di contatto (email, numero di telefono or QQ)</string>
+    <string name="setting_feedback_address">Contatto (email, telefono o QQ)</string>
     <string name="bluetooth">Bluetooth</string>
     <string name="setting_about_fw">Versione Firmware</string>
-    <string name="setting_about_app">Versione tradotta in italiano da Miui Italia</string>
+    <string name="setting_about_app">"Miui Italia (www.miui.it) - Versione"</string>
     <string name="stop">Fine</string>
     <string name="start">Inizio</string>
     <string name="no_wear_bracelet">La notte scorsa non hai indossato MiBand</string>
@@ -452,20 +452,20 @@ Non ti fermare, continua così!"</string>
     <string name="dynamic_pull_connect_failed">Errore di connessione, riprova</string>
     <string name="dynamic_pull_connect_failed_hint">Assicurati di avere il telefono completamente carico</string>
     <string name="dynamic_pull_not_sync_today">Oggi non ho ancora sincronizzato</string>
-    <string name="dynamic_pull_last_sync_time">Ultima sincronizzazione</string>
+    <string name="dynamic_pull_last_sync_time">Ultima sincronizz.</string>
     <string name="dynamic_pull_connecting_bracelet">Collegamento a MiBand…</string>
-    <string name="dynamic_pull_sync_after_connected">Dopo il collegamento, sincronizza automaticamente i dettagli</string>
-    <string name="dynamic_pull_syncing">Sincronizzando i dettagli…</string>
+    <string name="dynamic_pull_sync_after_connected">Sincronizza dopo il collegamento</string>
+    <string name="dynamic_pull_syncing">Sincronizzazione in corso...</string>
     <string name="dynamic_pull_syncing_progress">Sincronizzato %s%%</string>
-    <string name="dynamic_pull_release_to_sync">Avvia sincronizzazione dei dettagli</string>
-    <string name="dynamic_pull_pull_to_sync">Tira per sincronizzare</string>
+    <string name="dynamic_pull_release_to_sync">Avvia sincronizzazione</string>
+    <string name="dynamic_pull_pull_to_sync">Trascina per sincronizzare</string>
     <string name="dynamic_pull_update_report">Aggiornati %s dati</string>
     <string name="dynamic_pull_sync_error">Impossibile sincronizzare, trascina per aggiornare.</string>
     <string name="bind_weixin_qrcode_name">MiBand QR code</string>
-    <string name="mili_exit_login_info_unbind">"Uscendo il telefono perderà l'associazione al MiBand"</string>
+    <string name="mili_exit_login_info_unbind">"Uscendo il telefono perderà l'associazione con MiBand"</string>
     <string name="mili_exit_login_info_unlock">Tutte le funzioni non saranno più disponibili.</string>
     <string name="mili_exit_login_info_continue_tip">"Confermare l'uscita con ESCI"</string>
-    <string name="mili_exit_login_info_exiting">Chiusura…</string>
+    <string name="mili_exit_login_info_exiting">Chiusura...</string>
     <string name="back">Indietro</string>
     <string name="enable_debug_log">Debug log attivato!</string>
     <string name="disable_debug_log">Disabilita debug!</string>
